--- a/README
+++ b/README
@@ -1,1 +1,22 @@
 RealEx library for interfacing with www.realexpayments.com
+
+require 'real_ex'
+
+RealEx::Config.shared_secret = 'YOUR SHARED SECRET'
+RealEx::Config.merchant_id = 'YOUR MERCHANT ID'
+
+card = RealEx::Card.new(:number => '4263971921001307', :cvv => '509', :expiry_date => '0822', :cardholder_name => 'Paul Campbell', :type => 'VISA')
+
+transaction = RealEx::Transaction.new(
+:customer_number => 1234, :variable_reference => 1234,
+:card => card, :amount => 500, :order_id => 12345, :currency => 'EUR', :autosettle => true)
+
+transaction.comments << "Here's a comment"
+
+transaction.to_xml
+
+transaction.shipping_address = RealEx::Address.new(:type => 'shipping', :code => 'Postal Code', :country => 'Country')
+
+transaction.billing_address = RealEx::Address.new(:type => 'billing', :code => 'Postal Code', :country => 'Country')
+
+transaction.authorize!
